# myGameLauncher

./: CMakeLists.txt  Home.qml  HomeForm.ui.qml  countryGuess.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
countryGuess/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
countryGuess/game/: CMakeLists.txt  engine.cpp  engine.h  gamesettings.cpp  gamesettings.h  squarejoker.cpp  squarejoker.h  tools.cpp  tools.h
countryGuess/ressources/: liste.csv
countryGuess/tests/: CMakeLists.txt  test-distance.cpp  test-liste.cpp
countryGuess/world/: CMakeLists.txt  city.cpp  city.h  continent.cpp  continent.h  country.cpp  country.h  world.cpp  world.h
